# validity-first-polycube-labeling

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh
app/: README.md  areas_to_tilt.cpp  automatic_polycube.cpp  convert_labeled_obj.cpp  extract_surface.cpp  flip_normals.cpp  geogram2gltf.cpp  graphcut_labeling.cpp  halfedge_movements.cpp  hex_mesh_viewer.cpp  labeling_painter.cpp  labeling_stats.cpp  labeling_viewer.cpp  mesh_stats.cpp  naive_labeling.cpp  ovm_io.cpp  polycube_distortion.cpp  reorient_mesh.cpp  to_glTF.cpp  volume_labeling.cpp
cmake/: automatic_polycube.cmake  automatic_polycube_config.cmake
data/B0/: about.txt  hex.mesh  labeling.txt
ext/DisjointSet/: DisjointSet.hpp
ext/GraphCutOptimization/: CMakeLists.txt  GCO_README.TXT  README.md
ext/GraphCutOptimization/src/: GCoptimization.cpp  GCoptimization.h  LinkedBlockList.cpp  LinkedBlockList.h  block.h  example.cpp  graph.cpp  graph.h  maxflow.cpp
images/: automatic_polycube.tape
include/: CustomMeshGfx.h  CustomMeshHalfedges.h  GraphCutLabeling.h  HexMeshViewerApp.h  LabelingGraph.h  LabelingViewerApp.h  README.md  SimpleMeshApplicationExt.h  about_window.h  basic_stats.h  colormaps_array.h  containers.h  containers_Geogram.h  containers_macros.h  containers_std.h  dump_mesh.h  geometry.h  geometry_distortion.h  geometry_halfedges.h  geometry_hexahedra.h  geometry_mesh_ext.h  glTF.h  gui_base.h  gui_labeling.h  hex_mesh.h  io_dump.h  io_glTF.h  labeling.h  labeling_generators.h  labeling_graph.h  labeling_graphcuts.h  labeling_io.h  labeling_operators_on_distortion.h  labeling_operators_on_invalidity.h  stats.h
src/: CustomMeshGfx.cpp  CustomMeshHalfedges.cpp  GraphCutLabeling.cpp  HexMeshViewerApp.cpp  LabelingGraph.cpp  LabelingViewerApp.cpp  colormaps_array.cpp  containers.cpp  containers_Geogram.cpp  dump_mesh.cpp  geometry.cpp  geometry_distortion.cpp  geometry_hexahedra.cpp  glTF.cpp  gui_base.cpp  gui_labeling.cpp  hex_mesh.cpp  io_dump.cpp  io_glTF.cpp  labeling.cpp  labeling_colormap.xpm  labeling_generators.cpp  labeling_graph.cpp  labeling_graphcuts.cpp  labeling_io.cpp  labeling_operators_on_distortion.cpp  labeling_operators_on_invalidity.cpp
tests/: CMakeLists.txt  main.cpp
